# Go1-QP-MPC-Controller

./: .gitignore  README.md
src/a1_cpp/: CMakeLists.txt
src/a1_cpp/config/: gazebo_a1_mpc.yaml  gazebo_a1_mpc_2x.yaml  gazebo_a1_qp.yaml  hardware_a1_mpc.yaml  hardware_a1_mpc_new.yaml  hardware_a1_qp.yaml
src/a1_cpp/src/: A1CtrlStates.h  A1Params.h  A1RobotControl.cpp  GazeboA1ROS.cpp  GazeboA1ROS.h  HardwareA1ROS.cpp  HardwareA1ROS.h
src/a1_cpp/src/utils/: Utils.h
src/data_collection/: CMakeLists.txt  package.xml
src/data_collection/data/: qSineSignal.txt  qSineSignalClean.txt
src/data_collection/launch/: lowlevel_demo.launch
src/data_collection/src/: HighLevel.cpp  HighLevel.hpp  Lowlevel.cpp  Lowlevel.hpp  MainHardware.cpp  signal_sine.cpp  signal_sine.hpp
src/go1_rl_cpp/go1_rl_controller/: CMakeLists.txt  package.xml
src/go1_rl_cpp/go1_rl_controller/include/torch_eigen/: TorchEigen.hpp
src/go1_rl_cpp/go1_rl_controller/libtorch/: build-version
src/go1_rl_cpp/go1_rl_controller/libtorch/include/caffe2/core/: macros.h
src/go1_rl_cpp/go1_rl_controller/src/: TorchEigen.cpp
src/go1_rl_cpp/pytorch_debug/: CMakeLists.txt  actor_architecture_default_1.pth  cpp_model.pt  main.cpp  module.py  rl_policy_module.py  student_traced_debug.pt
src/go1_rl_ctrl_cpp/: CMakeLists.txt  package.xml
src/go1_rl_ctrl_cpp/config/: hardware_parameters.yaml  parameters.yaml
src/go1_rl_ctrl_cpp/config/xml/: act.xml  foot_force.xml  foot_force_hardware.xml  foot_pos.xml  joint_pos.xml  joint_vel.xml  obs.xml  torque.xml  try.xml
src/go1_rl_ctrl_cpp/launch/: go1_ctrl.launch  go1_ctrl_hardware.launch
src/go1_rl_ctrl_cpp/libtorch/libtorch/: build-hash
src/go1_rl_ctrl_cpp/libtorch/libtorch/include/caffe2/core/: macros.h
src/go1_rl_ctrl_cpp/libtorch/libtorch/share/cmake/Torch/: TorchConfig.cmake
src/go1_rl_ctrl_cpp/resource/: blind_curri.pt  mass.pt  network_0.25.pt  position.pt  stairs.pt  stand_cpp_model.pt  try.pt  try_1.pt
src/go1_rl_ctrl_cpp/src/: GazeboA1ROS.cpp  GazeboA1ROS.h  Go1CtrlStates.hpp  Go1Params.hpp  Go1RLController.cpp  Go1RLController.hpp  Go1RLHardwareController.cpp  Go1RLHardwareController.hpp  MainGazebo.cpp  MainHardware.cpp  SwitchController.hpp  TestHardware.cpp
src/go1_rl_ctrl_cpp/src/EKF/: Go1BasicEKF.cpp  Go1BasicEKF.hpp
src/go1_rl_ctrl_cpp/src/legKinematics/: Go1Kinematics.cpp  Go1Kinematics.hpp
src/go1_rl_ctrl_cpp/src/observation/: Go1HardwareObservation.hpp  Go1Observation.hpp  go1Observation.hpp
src/go1_rl_ctrl_cpp/src/servo_stand_policy/: GazeboServo.cpp  GazeboServo.hpp  HardwareServo.cpp  HardwareServo.hpp  HardwareServoSwitch.cpp  HardwareServoSwitch.hpp  body.cpp
src/go1_rl_ctrl_cpp/src/stand_policy/: A1RobotControl.cpp  A1RobotControl.hpp  GazeboA1ROS.cpp  GazeboA1ROS.hpp  HardwareA1ROS.cpp  HardwareA1ROS.hpp
src/go1_rl_ctrl_cpp/src/torch_eigen/: TorchEigen.cpp
src/go1_rl_ctrl_cpp/src/utils/: Utils.cpp  Utils.h  Utils.hpp
src/pytorch_debug/: CMakeLists.txt  module.py
